# substreams-raw-block-rewards-sync

./: .gitignore  Cargo.toml
spkg/: tl-solana-raw-block-rewards-1-0-3-v1.0.3.spkg
src/: arrow_structs.rs  main.rs  substreams.rs  substreams_stream.rs
src/pb/: pb.rs  sf.substreams.sink.files.v1.rs
