[package]
name = "substreams-sink-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.12", features = ["gzip", "tls-roots", "zstd"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "1"
chrono = "0.4.38"
regex = "1.11.1"
lazy_static = "1.5.0"
semver = "1.0.23"
serde                    = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
parquet = "55.1.0"
arrow = "55.1.0"
arrow_convert_derive = "0.9.0"
arrow_convert        = "0.9.0"
itertools = "0.14.0"

